# gerd

./: .gitignore  .pre-commit-config.yaml  DEV.md  LICENSE  README.md  db_build.py  env.generate_grassco  env.instruct_grassco  env.sample  env.trainining_instructions_grascco  env.trainining_unstructured_grascco  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  release.py  versions.json
.github/ISSUE_TEMPLATE/: bug.yaml  feature-request.yaml  use-case.yaml
.github/workflows/: mkdocs_dev.yml  mkdocs_rel.yml  python-ci.yml
0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.7/concepts/: index.html
0.7/develop/: index.html
0.7/reference/gerd/: index.html
0.7/reference/gerd/backends/: index.html
0.7/reference/gerd/backends/bridge/: index.html
0.7/reference/gerd/backends/rest_client/: index.html
0.7/reference/gerd/backends/rest_server/: index.html
0.7/reference/gerd/config/: index.html
0.7/reference/gerd/features/: index.html
0.7/reference/gerd/features/prompt_chaining/: index.html
0.7/reference/gerd/frontends/: index.html
0.7/reference/gerd/frontends/gen_frontend/: index.html
0.7/reference/gerd/frontends/generate/: index.html
0.7/reference/gerd/frontends/instruct/: index.html
0.7/reference/gerd/frontends/qa_frontend/: index.html
0.7/reference/gerd/frontends/router/: index.html
0.7/reference/gerd/frontends/training/: index.html
0.7/reference/gerd/loader/: index.html
0.7/reference/gerd/models/: index.html
0.7/reference/gerd/models/label/: index.html
0.7/reference/gerd/models/logging/: index.html
0.7/reference/gerd/models/model/: index.html
0.7/reference/gerd/models/qa/: index.html
0.7/reference/gerd/qa/: index.html
0.7/reference/gerd/rag/: index.html
0.7/reference/gerd/training/: index.html
0.7/reference/gerd/transport/: index.html
0.7/related/: index.html
0.7/search/: search_index.json
binder/: environment.yml
config/: chat_llama_3_1_abl.yml  chat_llama_3_2_1b.yml  chat_llama_3_2_1b_instruct.yml  chat_openai.yml  config.yml  gen_chaining.yml  gen_default.yml  hello.yml  lora_default.yml  lora_example.yml  lora_instruct_example.yml  lora_unstructured_example.yml  qa_default.yml
data/: data.txt
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/concepts/: index.html
develop/develop/: index.html
develop/examples/: chaining.py  generate.py  run_lora_instruction.py  run_lora_unstructured.py
develop/reference/config/: index.html
develop/reference/gerd/: index.html
develop/reference/gerd/backend/: index.html
develop/reference/gerd/backends/: index.html
develop/reference/gerd/config/: index.html
develop/reference/gerd/features/: index.html
develop/reference/gerd/frontends/: index.html
develop/reference/gerd/loader/: index.html
develop/reference/gerd/models/: index.html
develop/reference/gerd/qa/: index.html
develop/reference/gerd/rag/: index.html
develop/reference/gerd/training/: index.html
develop/reference/gerd/transport/: index.html
develop/related/: index.html
develop/search/: search_index.json
docs/: README.md  concepts.md  develop.md  related.md
docs/notebooks/: hello_gerd.ipynb
docs/reference/: config.md
examples/: chaining.py  chat.py  generate.py  grascco_instruct.py  hello.py  run_lora.py  run_lora_instruction.py  run_lora_unstructured.py  train_lora_instruction.py  train_lora_unstructured.py
gerd/: __init__.py  backend.py  benchmark.py  config.py  llm.py  loader.py  rag.py  transport.py  utils.py
gerd/backends/: __init__.py  bridge.py  loader.py  rag.py  rest_client.py  rest_server.py
gerd/features/: __init__.py  prompt_chaining.py
gerd/frontends/: __init__.py  gen_frontend.py  generate.py  instruct.py  qa_frontend.py  rag_frontend.py  router.py  training.py
gerd/models/: __init__.py  gen.py  label.py  logging.py  model.py  qa.py  server.py
gerd/qa/: __init__.py  qa_service.py
gerd/training/: __init__.py  data.py  instruct.py  lora.py  trainer.py  unstructured.py
loras/: lora.txt
models/: model.txt  model_download.txt
notebooks/: environment.yml  hello_gerd.ipynb
prompts/: gen.txt  gen_con.txt  qa.txt  qa_analyze.txt  qa_analyze_mistral.txt  qa_analyze_single_lora.txt  qa_analyze_vicuna.txt  qa_fact_checking.txt  qa_vicuna.txt
results/: grascco_benchmark_no_rag.csv  grascco_benchmark_one_file.csv  grascco_benchmark_rag.csv  grascco_benchmark_rag_one_file.csv
scripts/: release.py
src/: document_generation.py  document_questioning.py  prompts.py  prompts_dq.py  utils.py
team_red/: backend.py  config.py  document_generation.py  document_questioning.py  frontend.py  llm.py  prompts_dq.py  transport.py  utils.py
team_red/backend/: __init__.py  direct.py  interface.py  rest_server.py
team_red/backends/: bridge.py  rest_client.py  rest_server.py
team_red/frontends/: __init__.py  document_generation.py  document_questioning.py  gen_frontend.py  qa_frontend.py
team_red/models/: backend.py  data.py  features.py  gen.py  label.py  model.py  qa.py  server.py
team_red/qa/: __init__.py  prompts.py  qa_service.py
templates/: llama_3_instruct.jinja2
tests/: __init__.py  conftest.py  test_config.py  test_no_auto.py  test_prompt_config.py  test_utils.py
tests/data/: env.test  gen_test.yml  prompt.txt  qa_test.yml  simple_prompt.jinja2
tests/data/grascco/: 2024-01-20-12-grascco.json  Cajal.txt  README.md  grascco.json
tests/data/grascco/raw/: Baastrup.txt  Beuerle.txt  Boeck.txt  Cajal.txt  Clausthal.txt  Colon_Fake_A.txt  Colon_Fake_B.txt  Colon_Fake_C.txt  Colon_Fake_D.txt  Colon_Fake_E.txt  Colon_Fake_F.txt  Colon_Fake_G.txt  Colon_Fake_H.txt  Colon_Fake_J.txt  Colon_Fake_K.txt  Dewald.txt  Dupuytren.txt  Ehrenberger.txt  Fabry.txt  Fleischmann.txt  Fuss.txt  Gebauer.txt  Haefner.txt  Ilgner.txt  Jadassohn.txt  Jenninger.txt  Joubert.txt  Kawasaki.txt  Koenig.txt  Leitner.txt  Meulengracht.txt  Meyr.txt  Neubauer.txt  Obradovic.txt  Osler.txt  Popovic.txt  Praechtel.txt  Queisser.txt  Quervain.txt  Recklinghausen.txt  (+20 more)
tests/qa/: test_qa_service.py
tests/rest/: requests.http
(+30 files in other folders)
