[project]
name = "gerd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi>=0.115.5",
    "faiss-cpu>=1.9.0.post1",
    "gradio>=5.6.0",
    "jinja2>=3.1.4",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-huggingface>=0.1.2",
    "llama-cpp-python>=0.3.2",
    "orjson>=3.10.11",
    "poethepoet>=0.30.0",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
    "pypdf>=5.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uvicorn>=0.32.1",
]

[tool.poe.tasks]
test = "pytest -x"
lint = "mypy gerd"
qa = "gradio gerd/frontends/qa_frontend.py"
gen = "gradio gerd/frontends/gen_frontend.py"
server = "python -m gerd.backends.rest_server"
test_manual = "python -m pytest tests/test_no_auto.py -k 'manual' --no-skip"
hello = "python examples/hello.py"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (imports) styling
    "N",    # pep8 naming checks
    "B",    # bugbear checks
    "ANN",  # type annotations
    "S",    # bandid code security
    "C",    # improve code comprehension
    "EM",   # use recommended error message composition
    "G",    # use recommended logging format
    "T20",  # no print allowed
    "PT",   # pytest styling recommendations
    "SLF",  # prevent access to private members
    "SIM",  # code simplification recommendations
    "TCH",  # checks for type checking imports
    "ARG",  # no unused arguments
    "PERF", # performance anti pattern
    # "FURB",  # enforces modern python
    # "D",     # enforce documented functions [will be enabled soon]
]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = [
    "ANN101", # do not enforce self type annotation
    "ANN102", # do not enforce cls type annoation
]

# 3. Fix everything except flake8-bugbear (`B`) violations.
fixable = ["ALL"]
unfixable = ["B"]

# 4. Things to ignore
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # assert is fine in pytest

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
]
